; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_wm8739.c_wm8739_s_clock_freq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_wm8739.c_wm8739_s_clock_freq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.v4l2_subdev = type { i32 }
%struct.wm8739_state = type { i32 }

@R9 = common dso_local global i32 0, align 4
@R8 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.v4l2_subdev*, i32)* @wm8739_s_clock_freq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wm8739_s_clock_freq(%struct.v4l2_subdev* %0, i32 %1) #0 {
  %3 = alloca %struct.v4l2_subdev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.wm8739_state*, align 8
  store %struct.v4l2_subdev* %0, %struct.v4l2_subdev** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %3, align 8
  %7 = call %struct.wm8739_state* @to_state(%struct.v4l2_subdev* %6)
  store %struct.wm8739_state* %7, %struct.wm8739_state** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.wm8739_state*, %struct.wm8739_state** %5, align 8
  %10 = getelementptr inbounds %struct.wm8739_state, %struct.wm8739_state* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  %11 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %3, align 8
  %12 = load i32, i32* @R9, align 4
  %13 = call i32 @wm8739_write(%struct.v4l2_subdev* %11, i32 %12, i32 0)
  %14 = load i32, i32* %4, align 4
  switch i32 %14, label %27 [
    i32 44100, label %15
    i32 48000, label %19
    i32 32000, label %23
  ]

15:                                               ; preds = %2
  %16 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %3, align 8
  %17 = load i32, i32* @R8, align 4
  %18 = call i32 @wm8739_write(%struct.v4l2_subdev* %16, i32 %17, i32 32)
  br label %28

19:                                               ; preds = %2
  %20 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %3, align 8
  %21 = load i32, i32* @R8, align 4
  %22 = call i32 @wm8739_write(%struct.v4l2_subdev* %20, i32 %21, i32 0)
  br label %28

23:                                               ; preds = %2
  %24 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %3, align 8
  %25 = load i32, i32* @R8, align 4
  %26 = call i32 @wm8739_write(%struct.v4l2_subdev* %24, i32 %25, i32 24)
  br label %28

27:                                               ; preds = %2
  br label %28

28:                                               ; preds = %27, %23, %19, %15
  %29 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %3, align 8
  %30 = load i32, i32* @R9, align 4
  %31 = call i32 @wm8739_write(%struct.v4l2_subdev* %29, i32 %30, i32 1)
  ret i32 0
}

declare dso_local %struct.wm8739_state* @to_state(%struct.v4l2_subdev*) #1

declare dso_local i32 @wm8739_write(%struct.v4l2_subdev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
